# Chess

./: .gitignore  CMakeLists.txt  Chess.sln  README.md
Chess/: Chess.vcxproj
Chess/Core/include/: AttackLookup.h  Bitboard.h  Board.h  ChessDefinitons.h  LoadGame.h  MagicBitboard.h  MoveGeneration.h
Chess/Core/src/: AttackLookup.cpp  Bitboard.cpp  Board.cpp  Game.cpp  LoadGame.cpp  MagicBitboard.cpp  MoveGeneration.cpp
